--- a/views/index.hbs
+++ b/views/index.hbs
@@ -136,11 +136,9 @@
                             <div class="row tab-entry-intro">
                                 <div class="col-twelve with-bottom-line">
 
-                                    <h1>Get To Know Us.</h1>
+                                    <h1>¿Interesado?</h1>
 
-                                    <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat
-                                        adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum
-                                        Consectetur ut in in eu do.</p>
+                                    <p class="lead">Contactame o suscribete!</p>
 
                                 </div>
                             </div> <!-- /tab-content-intro -->
